got a working version. Only works with up to 2 peers.

--- a/game.html
+++ b/game.html
@@ -1,12 +1,14 @@
 <html>
   <head>
+      <script src="peer.js"></script>
+      <script src="game.js"></script>
   </head>
   <body>
-    <input type="text" id="serverID"/>
+    <input type="text" id="roomIDInput"/>
     <button id="joinBtn">Join Room</button>
-    <button id="createRoom"></button>
-    <label id="roomIDLbl"></label>
+    <button id="createRoom">Create Room</button>
+    <label id="roomIDLbl">Room ID</label>
     <canvas id ="myCanvas"></canvas>
   </body>
-  <script src="game.js" width=600 height=400></script>
+  
 </html>
