first primitive prototype : server receives keyboard state of player, and then simulates world on his side.

--- a/server.html
+++ b/server.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <textarea id="statusTxt" style="width: 500px; height : 500px"></textarea>
+    <label id="playerX">PLAYER X</label>
   </body>
   
 </html>
