--- a/client.html
+++ b/client.html
@@ -1,6 +1,7 @@
 <html>
   <head>
       <script src="peer.js"></script>
+      <script src="player.js"></script>
       <script src="game.js"></script>
   </head>
   <body>
